plugins {
  id 'java'
  id 'application'
}

group='de.gurkenlabs.input4j'
version='1.0-SNAPSHOT'

java {
  sourceCompatibility = JavaVersion.VERSION_22
  targetCompatibility = JavaVersion.VERSION_22
}

application {
  mainClass = 'de.gurkenlabs.input4j.Program'
}

repositories {
  mavenCentral()
}

dependencies {
  testImplementation 'org.junit.jupiter:junit-jupiter:5.11.1'
  testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

test {
  useJUnitPlatform()
}

jar {
  manifest {
    attributes 'Implementation-Title': "LITIENGINE input playground",
            'Main-Class': 'de.gurkenlabs.input4j.Program',
            'Enable-Native-Access': 'ALL-UNNAMED'
  }
}

test {
  jvmArgs += '--enable-native-access=ALL-UNNAMED'
}

task remoteDebug(type: JavaExec) {
  mainClass = 'de.gurkenlabs.input4j.examples.ExamplePollAllInputDevicesManually'  // replace with your main class
  classpath = sourceSets.main.runtimeClasspath
  args = ['run']

  jvmArgs = [
          '-Xdebug',
          '-Xrunjdwp:transport=dt_socket,server=y,suspend=y,address=5005'
  ]
}

tasks.withType(JavaExec).configureEach {
  jvmArgs += '--enable-native-access=ALL-UNNAMED'
}
